# interactive-camera-matrices

./: .gitignore  CMakeLists.txt  CameraMatrices.pro  README.md  camera.cpp  camera.h  cameramatriceswidget.cpp  cameramatriceswidget.h  cameramatrixmodel.cpp  cameramatrixmodel.h  core-profile.qrc  extrinsiccontrolwidget.cpp  extrinsiccontrolwidget.h  extrinsicmatrixmodel.cpp  extrinsicmatrixmodel.h  intrinsiccontrolwidget.cpp  intrinsiccontrolwidget.h  intrinsicmatrixmodel.cpp  intrinsicmatrixmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  modelasset.cpp  modelasset.h  modelassetsmanager.cpp  modelassetsmanager.h  modelinstance.cpp  modelinstance.h  simple.frag  simple.vert  slidingcontrolwidget.cpp  slidingcontrolwidget.h  threedobject.cpp  threedobject.h
